sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:13: error: Int(0) does not take parameters
    for (i <- n-2 to 0 (downard)) {
                       ^