sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var n = getValueCount();
  var isSorted = false;
  while (!isSorted) {
    isSorted =true;
    for (i <- 0 to n-2) {
      if (isSmaller(i, i+1)) {
        swap(i, i+1);
        isSorted = false;
      }
    }
    for (i <- n-2 to 0 (downard)) {
      if (isSmaller(i, i+1)) {
        swap(i, i+1);
        isSorted = false;
      }
    }
  }
}